// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Button /> should render <a> tag by default 1`] = `
<a
  class="StyledButton-k0ad56-0 jFdJHn"
>
  <span
    class="ContentWrapper-juvto2-0 kMRFXB"
  >
    <span>
      children
    </span>
  </span>
</a>
`;

exports[`<Button /> should render correctly with custom props 1`] = `
<button
  class="StyledButton-k0ad56-0 fbIzHI"
>
  <span
    class="SpinnerWrapper-sc-1ln0y9p-0 csgNUt"
  >
    <span
      data-testid="spinner"
    />
  </span>
  <span
    class="ContentWrapper-juvto2-0 haOASu"
  >
    <span>
      children
    </span>
  </span>
</button>
`;

exports[`<Button /> should render correctly with default props and children 1`] = `
<button
  class="StyledButton-k0ad56-0 jFdJHn"
>
  <span
    class="ContentWrapper-juvto2-0 kMRFXB"
  >
    <span>
      children
    </span>
  </span>
</button>
`;

exports[`<Button /> should render render <button> tag 1`] = `
<button
  class="StyledButton-k0ad56-0 jFdJHn"
>
  <span
    class="ContentWrapper-juvto2-0 kMRFXB"
  >
    <span>
      children
    </span>
  </span>
</button>
`;
